[package]
name = "futures-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.22", features = ["blocking", "json", "native-tls-alpn"]}
futures = "0.3.29"
tokio = {version = "1.33.0", features = ["full"]}
