[package]
name = "slint-test"
version = "0.1.0"
authors = ["schleising <stephen@schleising.net>"]
edition = "2021"
build = "build.rs"
description = "A test bundle for slint"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"

[build-dependencies]
slint-build = "1.6"

[package.metadata.bundle]
name = "slint-test"
version = "0.1.0"
identifier = "schleising.github.io/slint-test/"
